# psf-tuf-runbook

./: .gitignore  Makefile  PRE-CEREMONY.md  README.md
assets/: 99-yubihsm.rules
ceremony/2020-10-30/: README.md
ceremony/2020-10-30/ceremony-products/0013200460/: 0013200460_targets_attestation.der  0013200460_targets_pubkey.pem  0013200460_targets_pubkey.pub
ceremony/2020-10-30/ceremony-products/0013200461/: 0013200461_cert.der  0013200461_root_attestation.der  0013200461_root_pubkey.pem  0013200461_root_pubkey.pub  0013200461_targets_attestation.der  0013200461_targets_pubkey.pem  0013200461_targets_pubkey.pub
ceremony/2020-10-30/ceremony-products/0013200462/: 0013200462_cert.der  0013200462_root_attestation.der  0013200462_root_pubkey.pem  0013200462_root_pubkey.pub  0013200462_targets_attestation.der  0013200462_targets_pubkey.pem  0013200462_targets_pubkey.pub
ceremony/2020-10-30/ceremony-products/DENK0102947/: DENK0102947_root_pubkey.pem  DENK0102947_root_pubkey.pub  DENK0102947_targets_pubkey.pem  DENK0102947_targets_pubkey.pub
ceremony/2020-10-30/ceremony-products/DENK0103189/: DENK0103189_root_pubkey.pem  DENK0103189_root_pubkey.pub  DENK0103189_targets_pubkey.pem  DENK0103189_targets_pubkey.pub
ceremony/2020-10-30/ceremony-products/DENK0200473/: DENK0200473_root_pubkey.pem  DENK0200473_root_pubkey.pub  DENK0200473_targets_pubkey.pem  DENK0200473_targets_pubkey.pub
nitrohsm-provision/: Cargo.toml
nitrohsm-provision/src/: main.rs
yubihsm-provision/: Cargo.toml  Makefile
yubihsm-provision/src/: main.rs
