[package]
name = "nitrohsm-provision"
version = "0.1.0"
authors = ["William Woodruff <william@trailofbits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dialoguer = "0.5.0"
lazy_static = "1.4"
pkcs11 = { git = "https://github.com/mheese/rust-pkcs11", rev = "fce73ce7a6ab9ecb9f314a922a99c0bb936daf08" }
rand = "0.7.3"
regex = "1.3"
