[package]
name = "yubihsm-provision"
version = "0.1.0"
authors = ["William Woodruff <william@trailofbits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"yubihsm" = { version = "0.32.1", features = ["usb", "passwords"] }
"dialoguer" = "0.5.0"
